# finite

./: .gitignore  CMakeLists.txt  Conventions.txt  HelloWorld.c  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Obstacle.cpp  Obstacle.h  Options.cpp  Options.h  PlaneObstacle.h  README.md  Tetrahedron.cpp  Tetrahedron.h  Timing.cpp  Timing.h  Utils.cpp  Utils.h  Vertex.cpp  Vertex.h  World.cpp  World.h  configure.sh  finite  gls.h  gui.cpp  main.cpp  tags  threading_notes.txt
Geometry/: Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Tetrahedron.cpp  Tetrahedron.h  Triangle.h  Vertex.cpp  Vertex.h
lib/geom/: Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Tetrahedron.cpp  Tetrahedron.h  Vertex.cpp  Vertex.h
lib/physics/: Obstacle.cpp  Obstacle.h  PlaneObstacle.cpp  PlaneObstacle.h  SoftBody.cpp  SoftBody.h
meshes/: bunny.mesh  cylsphere.mesh  ellipticcyl.mesh  sculpture.mesh  sphere-fine.mesh  tet.mesh  tets.mesh
qt/: CMakeLists.txt  GlWidget.cpp  GlWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MatrixViewer.cpp  MatrixViewer.h  MatrixViewer.ui  SimThread.cpp  SimThread.h  images.qrc  main.cpp
